# webassembly-test

./: .babelrc  .gitignore  README.md  package.json  webpack.config.js
assembly/: index.ts
go/src/: main.go  main.wasm
public/: index.html  index.wasm
rust/: Cargo.toml
rust/src/: lib.rs
src/: index.tsx
src/components/: app.tsx
